--- a/postgress_h/configs/common/pg_hba.conf
+++ b/postgress_h/configs/common/pg_hba.conf
@@ -1,14 +1,10 @@
-# TYPE  DATABASE        USER            ADDRESS                 METHOD
-# Allow replication connections from localhost by a user with replication privilege
-local   replication     all                                     trust
-host    replication     all             127.0.0.1/32            trust
-host    replication     all             ::1/128                 trust
-
-# Allow replication connections from the replication network
-host    replication     replica         all                     md5
-host    replication     postgres        all                     md5
-
-# Allow connection from all users on all databases
-local   all             all                                     trust
-host    all             all             0.0.0.0/0               md5
-host    all             all             ::/0                    md5
+host     all            replica    0.0.0.0/0    trust
+host     repmgr         replica    0.0.0.0/0    trust
+host     repmgr         replica    ::/0    trust
+host     replication      replica    0.0.0.0/0    trust
+host     replication      replica    ::/0    trust
+#hostssl     all             all             0.0.0.0/0               cert
+#hostssl     all             all             ::/0                    cert
+host     all              all       0.0.0.0/0    trust
+host     all              all       ::/0         trust
+local    all              all                    trust
