Remove obsolete backup files and metadata for base backup 000000010000000000000070

--- a/postgress_h/docker-compose.yml
+++ b/postgress_h/docker-compose.yml
@@ -1,10 +1,8 @@
-version: '3.8'
-
 services:
   postgresql-master:
     build:
-      context: .
-      dockerfile: Dockerfile.master-walg
+      context: ./custom-postgres 
+    image: custom-postgresql-repmgr:15  
     container_name: master
     environment:
       - POSTGRESQL_POSTGRES_PASSWORD=postgres
@@ -19,18 +17,16 @@ services:
       - REPMGR_NODE_ID=1
       - REPMGR_PORT_NUMBER=5432
       - REPMGR_USERNAME=replica
-      - WALG_FILE_PREFIX=file:///bitnami/postgresql/wal_backups
-      - PGUSER=postgres
-      - PGPASSWORD=postgres
     ports:
       - "5432:5432"
     volumes:
-      - postgresql_master_data:/bitnami/postgresql
-      - ./configs/master/postgresql.conf:/bitnami/postgresql/conf/postgresql.conf
-      - ./configs/master/repmgr.conf:/bitnami/repmgr/conf/repmgr.conf
-      - ./configs/common/pg_hba.conf:/bitnami/postgresql/conf/pg_hba.conf
-      - ./wal_backups:/bitnami/postgresql/wal_backups
-      - ./walg_config:/root/.walg
+      - postgress_h_postgresql_slave_data:/bitnami/postgresql
+      - ./configs/master/postgresql.conf:/custom-configs/postgresql.conf
+      - ./configs/master/repmgr.conf:/custom-configs/repmgr.conf
+      - ./configs/common/pg_hba.conf:/custom-configs/pg_hba.conf
+      - ./scripts/init:/docker-entrypoint-initdb.d
+      - ./configs/pgbackrest/pgbackrest.conf:/etc/pgbackrest/pgbackrest.conf:ro
+      - ./pgbackrest_repo:/var/lib/pgbackrest
     networks:
       - postgres_net
 
@@ -55,7 +51,10 @@ services:
     ports:
       - "5433:5432"
     volumes:
-      - postgresql_slave_data:/bitnami/postgresql
+      - ./configs/master/postgresql.conf:/custom-configs/postgresql.conf
+      - ./configs/master/repmgr.conf:/custom-configs/repmgr.conf
+      - ./configs/common/pg_hba.conf:/custom-configs/pg_hba.conf
+      - ./scripts/init:/docker-entrypoint-initdb.d
     networks:
       - postgres_net
 
@@ -79,12 +78,34 @@ services:
     networks:
       - postgres_net
 
+  pgbackrest:
+    build:
+      context: ./pgbackrest
+      dockerfile: Dockerfile
+    container_name: pgbackrest
+    depends_on:
+      - postgresql-slave
+    environment:
+      - PGPASSWORD=replica_pass
+      - PGHOST=postgresql-master
+      - PGPORT=5432
+    volumes:
+      - ./configs/pgbackrest/pgbackrest.conf:/etc/pgbackrest/pgbackrest.conf:ro
+      - ./pgbackrest_repo:/var/lib/pgbackrest
+      - ./backup:/backup
+      - ./scripts:/scripts
+      - postgress_h_postgresql_slave_data:/bitnami/postgresql
+    networks:
+      - postgres_net
+
 volumes:
   postgresql_master_data:
     driver: local
-  postgresql_slave_data:
+  postgress_h_postgresql_slave_data:
+    driver: local
+  pgbackrest_repo:
     driver: local
 
 networks:
   postgres_net:
-    driver: bridge
+    external: true
